samples/_failures_safe/1761632093_c4ca36_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd01ff3d.c: In function ‘main’:
./samples/SAFE/__tmp_bd01ff3d.c:147:25: error: expected expression at end of input
  147 |                         if (matrix1[i][
      |                         ^~
./samples/SAFE/__tmp_bd01ff3d.c:147:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bd01ff3d.c:147:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bd01ff3d.c:147:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bd01ff3d.c:147:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bd01ff3d.c:147:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bd01ff3d.c:147:25: error: expected declaration or statement at end of input
